css/style.css
/* ... */
@media (max-width: 767px) {
    .row.twoupmobile {
        --gridgap: 1em;
        display: grid;
        justify-content: center;
        text-align: center;
        grid-template-columns: repeat(2, 1fr);
        gap: var(--gridgap);
    }
    .one-fourth {grid-column: auto / span 1;}
}

/* FOR DEV PURPOSES ONLY */
.demo .column {
    padding: 1em;
    background: #ddd;
    text-align: center;
}
.demo .column p {
    margin: 0;
    padding: 0 0.5em;
    max-width: none;
}
.demo {
    padding: 2em 0;
}
.demo:after {
    position: fixed;
    top: 0;
    left: 0;
    padding: 5px;
    text-align: center;
    width: 100%;
    content: "Small (less than 768px)";
    color: #fff;
    background: #883333;
}

@media (min-width: 768px) {
    body.demo:after {
        content: "Medium (768px - 1049px)";
        background: #bcb83d;
    }
}
@media (min-width: 1050px) {
    body.demo:after {
        content: "Large (1050px - 1249px)";
        background: #669933;
    }
}
@media (min-width: 1250px) {
    body.demo:after {
        content: "Extra Large (1250px +)";
        background: #0099cc;
    }
}
.demo .column p:last-child {
    margin-bottom: 0;
}

/* SITE STRUCTURE */
/* Header& Footer */
body {
    background: rgba(234, 245, 251, 1);
}

/* Header & Footer */
.site-header a {
    color: #333;
}

.site-footer a {
    color: #333;
}
.site-header a:hover, .site-footer a:hover {
    color: rgb(171, 55, 99);
    text-decoration: none;
}

/* Header Only */
.site-header {
    background-color: transparent;
    border-bottom: 0px solid #ccc;
    padding: 0.5em 4%;
}
@media (min-width: 768px) {
    .site-header {
        display: flex;
        justify-content: space-between;
        padding-top: 0.75em;
    }
}

/* Site ID */
.site-id {
    text-align: center;
}
.site-id h1 {
    font-size: 1.5em;
    font-weight: normal;
    font-style: normal;
    margin: 0;
    color: #999;
    /* padding: 0.5em 0 0.4em 0; */
}
.site-id h1 a {
    font-weight: bold;
    display: inline-block;
    color: rgba(234, 245, 251, 1);
}

/* Footer Only */
.site-footer {
    background: rgba(234, 245, 251, 1);
    border-top: 0px solid #ccc;
}
.site-footer .container {
    padding-top: 0.25em;
    padding-bottom: 0.25em;
}
@media (min-width: 768px) {
    .site-footer .container {
        display: flex;
        justify-content: center;
        padding-bottom: 0.5em;
    }
}

/* Main Site Section (Main Content Area) */
.site-main {
    background: rgba(234, 245, 251, 1);
    h1 {
        display: flex;
        align-items: center;
        justify-content: center;
    }
}



/* Main Sections */
section {
    padding: 1.5em 0;
}

/* Hero Sections */
.container .hero {
    position: relative;
    top: 2em;
    margin-bottom: 3em;
}

.hero {
    /* background: rgba(223, 236, 253, 1); */
    border-top: none;
    padding: 8em 1em 8em 1em;
    margin-bottom: 1.5em;
    /* background-color: rgba(253, 247, 223, 1); */
}
.hero h1, .hero h2 {
    font-style: 3em;
    line-height: 1.1em;
    min-width: 10em;
    max-width: 20em;
}
.hero p {
    max-width: 20em;
}
.hero.text-centered h1, .hero.text-centered h2, .hero.text-centered h3, .hero.text-centered h4, .hero.text-centered h5, .hero.text-centered h6, .hero.text-centered p {
    margin-left: auto;
    margin-right: auto;
}
.hero.full-width {
    margin-top: 0;
    margin-bottom: 0;
}

/* Sub Pages with Multiple Column Layout */
@media (min-width: 768px) {
    .subpage-twocol {
        display: flex;
    }
}
@media (min-width: 768px) {
    .subpage-sidebar {
        width: 21%;
        padding-right: 4%;
    }
}
.subpage-sidebar .subheader {
    font-size: 1em;
    font-style: normal;
    font-weight: normal;
    margin-top: 0.5em;
    margin-bottom: 0;
    padding: 0.5em 0;
    border-bottom: 1px solid #ccc;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: #999;
}

@media (min-width: 768px) {
    .subpage-main {
        width: 70%;
        padding-left: 4%;
        border-left: 1pc solid #ccc;
    }
}
.subpage-main section:first-child {
    padding-top: 0;
}
.subpage-main section:last-child {
    padding-bottom: 5em;
}
.subpage-navigation {
    font-family: utopia-std, serif;
    font-weight: 400;
    font-style: normal;
    padding: 0;
}
.subpage-navigation ul {
    margin: 0;
    padding: 0;
}
.subpage-navigation ul li {
    list-style: none;
    margin-left: 0;
}
.subpage-navigation ul li a {
    text-decoration: none;
    display: block;
    padding: 0.5em 0.875em;
    border-bottom: 1px solid #ccc;
}
.subpage-navigation ul li ul li a {
    padding-left: 1.875em;
}

/* Sub Page with list items */
.list-item {
    padding: 2em 0;
}
.list-item .featured-image {
    width: 30%;
    margin-right: 5%;
    float: left;
}
.list-item article {
    margin-left: 35%;
}
.list-item article h2 {
    margin-top: 0;
}
.list-item:after {
    content: "";
    display: table;
    clear: both;
}
.list-item + .list-item {
    margin-top: 2em;
    border-top: 1px solid #eee;
    padding-top: 4em;
}

/* Swap the display order of two columns */
.orderswap {
    flex-direction: row-reverse;
}

/* OLD/LEGACY SUPPORT FOR PRE-FLEXBOX ORDERSWAP */
/* OLD VERTICAL CENTERING MARKUP PRE-FLEXBOX */
.vert-parent .column {
    display: flex;
    align-items: center;
}

/* Thumb List */
.thumblist {
    padding: 0;
}
.thumblist li {
    list-style: none;
    margin: 0;
    padding: 3em 0;
    clear: both;
}
.thumblist li img {
    max-width: 30%;
    margin: 0 2em 1em 0;
    float: left;
}
.thumblist li p {
    max-width: none;
}
.thumblist li + li {
    border-top: 1px solid #ddd;
}
@media (max-width: 767px) {
    .thumblist li img {
        max-width: 100%;
        margin: 0 0 1em 0;
        float: none;
    }
}
.thumblist-grid {
    margin: 2em 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
}
.thumblist-grid li {
    list-style: none;
    margin-left: 0;
    margin-bottom: 2em;
    width: 46%;
    margin-right: 8%;
    text-align: center;
    font-size: 0.8em;
}
/* ... */

